# astroid

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cplus_ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
docs/: Actor_8h.html  Actor_8h_source.html  ChangeLevel_8h.html  ChangeLevel_8h_source.html  CppTypes_8h.html  CppTypes_8h.js  CppTypes_8h_source.html  Doxyfile  Game_8h.html  Game_8h_source.html  IAction_8h.html  IAction_8h_source.html  Level_8h.html  Level_8h_source.html  World_8h.html  World_8h_source.html  annotated.html  classTGEngine_1_1Game_1_1Actor-members.html  classTGEngine_1_1Game_1_1Actor.html  classTGEngine_1_1Game_1_1Actor.js  classTGEngine_1_1Game_1_1Actor__inherit__graph.map  classTGEngine_1_1Game_1_1Actor__inherit__graph.md5  classTGEngine_1_1Game_1_1ChangeLevel-members.html  classTGEngine_1_1Game_1_1ChangeLevel.html  classTGEngine_1_1Game_1_1ChangeLevel__coll__graph.map  classTGEngine_1_1Game_1_1ChangeLevel__coll__graph.md5  classTGEngine_1_1Game_1_1IAction-members.html  classTGEngine_1_1Game_1_1IAction.html  classTGEngine_1_1Game_1_1IAction__inherit__graph.map  classTGEngine_1_1Game_1_1IAction__inherit__graph.md5  classTGEngine_1_1Game_1_1Level-members.html  classTGEngine_1_1Game_1_1Level.html  classTGEngine_1_1Game_1_1Level.js  classTGEngine_1_1Game_1_1World-members.html  classTGEngine_1_1Game_1_1World.html  classTGEngine_1_1Game_1_1World.js  classes.html  dir_28bccd3e80b957a2d10f3dd3fe7977cb.html  dir_4641e6c1637b97b7dcbd02db60ec4ef1.html  dir_6dc5598a0b4d07a3c625c5443d30a172.html  (+31 more)
docs/html/: Actor_8h.html  Actor_8h_source.html  ChangeLevel_8h.html  ChangeLevel_8h_source.html  Core_8h.html  Core_8h_source.html  CppTypes_8h.html  CppTypes_8h_source.html  Game_8h.html  Game_8h_source.html  IAction_8h.html  IAction_8h_source.html  Level_8h.html  Level_8h_source.html  World_8h.html  World_8h_source.html  _actor_8h_source.html  _change_level_8h_source.html  _core_8h_source.html  (+159 more)
tests/: CMakeLists.txt
(+116 files in other folders)
